--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 	path = bundle/vim-fugitive
 	url = https://github.com/tpope/vim-fugitive
     ignore = dirty
+[submodule "supertab"]
+	path = supertab
+	url = https://github.com/ervandew/supertab.git
