--- a/.gitmodules
+++ b/.gitmodules
@@ -17,3 +17,6 @@
 [submodule "supertab"]
 	path = supertab
 	url = https://github.com/ervandew/supertab.git
+[submodule "neocomplcache.vim"]
+	path = neocomplcache.vim
+	url = https://github.com/Shougo/neocomplcache.vim
