--- a/.gitmodules
+++ b/.gitmodules
@@ -21,7 +21,7 @@
 	path = bundle/supertab
 	url = https://github.com/ervandew/supertab.git
 [submodule "bundle/auto-pairs"]
-	path = auto-pairs
+	path = bundle/auto-pairs
 	url = https://github.com/jiangmiao/auto-pairs.git
 [submodule "bundle/vim-hybrid"]
 	path = bundle/vim-hybrid
