--- a/.gitmodules
+++ b/.gitmodules
@@ -55,6 +55,6 @@
 [submodule "bundle/typescript-syntax"]
 	path = bundle/typescript-syntax
 	url = https://github.com/leafgarland/typescript-vim.git
-[submodule "bundle/ctrlp.vim"]
-	path = bundle/ctrlp.vim
-	url = https://github.com/kien/ctrlp.vim.git
+[submodule "bundle/vimproc.vim"]
+	path = bundle/vimproc.vim
+	url = https://github.com/Shougo/vimproc.vim.git
